--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@langchain/community": "^0.3.41",
     "@langchain/core": "^0.3.46",
     "@langchain/langgraph": "^0.2.65",
     "@langchain/mcp-adapters": "^0.4.2",
+    "@langchain/tavily": "^0.1.1",
     "@modelcontextprotocol/sdk": "^1.10.2",
-    "@types/node-fetch": "^2.6.12",
     "dotenv": "^16.5.0",
     "node-fetch": "^3.3.2",
     "uuid": "^11.1.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "@types/node-fetch": "^2.6.12",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
